--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -23,3 +23,6 @@ block content
 
         else
             p There are no copies of this event in the library.
+    hr
+    p
+    a(href=event.url + '/delete') Delete event
