--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -8,8 +8,6 @@ block content
     p #[strong Summary:] #{event.description}
 
     div(style='margin-left:20px;margin-top:20px')
-        h2(style='font-size: 1.5rem;') Copies
-
         each val in event_instances
             hr
             if val.status=='Available'
@@ -23,6 +21,17 @@ block content
 
         else
             p There are no copies of this event in the library.
+
+    div(style='margin-left:20px;margin-top:20px')
+        h2(style='font-size: 1.5rem;') users
+
+        each val in users
+            p.user #{val.username}
+
+        else
+            p There are no users
     hr
     p
     a(href=event.url + '/delete') Delete event
+    p
+    a(href=event.url + '/join') join event
