--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,5 +27,11 @@ html(lang='en')
               li
                 a(href='/home/event/create') Create new event
 
+                hr
+              li
+                a(href='/user/login') login
+              li
+                a(href='/user/register') register
+
         div(class='col-sm-10')
           block content
