--- a/views/event_delete.pug
+++ b/views/event_delete.pug
@@ -5,7 +5,7 @@ block content
   h1 #{title}: #{event.title}
 
 
-    p Do you really want to delete this Author?
+    p Do you really want to delete this Event?
 
     form(method='POST')
       div.form-group
