users can logout user can leave event
different event detail page if user is signed in or not
if user is signed in => if orginizer, can delete
if participant => can leave

added a couple TODO's

found a way to remove object from DB schema list

--- a/views/event_detail_unsigned.pug
+++ b/views/event_detail_unsigned.pug
@@ -25,10 +25,6 @@ block content
         else
             p There are no users
     hr
-    p
-    if event.organizer===user._id
-        a(href=event.url + '/delete') Delete event
-    p
 
     if event.status==='Available'
-        a(href=event.url + '/join') join event
+        a(href='/user/login') join event
