--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,6 +32,8 @@ html(lang='en')
                 a(href='/user/login') login
               li
                 a(href='/user/register') register
+              li
+                a(href='/user/logout') logout
 
         div(class='col-sm-10')
           block content
