--- a/views/categorie_detail.pug
+++ b/views/categorie_detail.pug
@@ -1,17 +1,17 @@
 extends layout
 
 block content
-
-  h1 Genre: #{categorie.name}
-
-  div(style='margin-left:20px;margin-top:20px')
-
-    h2(style='font-size: 1.5rem;') Books
+  h1= title
+  if categorie
+    h2 Categorie: #{categorie.name}
     if categorie_events.length
-      dl
+      h3 Open Events:
+      ul
         each event in categorie_events
-          dt
+          li
             a(href=event.url) #{event.title}
-          dd #{event.summary}
+            p Available slots:   #{event.participants.length} / #{event.max_size}
     else
-      p This categorie has no events.
+      p No open events in this category.
+  else
+    p Categorie not found.
