--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,8 +19,6 @@ html(lang='en')
               li
                 a(href='/home/events') All events
               li
-                a(href='/home/eventinstances') All Event-instances
-              li
                 a(href='/home/categories') All games
               li
                 hr
@@ -34,6 +32,8 @@ html(lang='en')
                 a(href='/user/register') register
               li
                 a(href='/user/logout') logout
+              li
+                a(href='/user/profile') profile
 
         div(class='col-sm-10')
           block content
