--- a/views/event_form.pug
+++ b/views/event_form.pug
@@ -11,14 +11,12 @@ block content
       textarea#description.form-control(placeholder='description' name='description' required)= undefined===event ? '' : event.summary
     div.form-group
       label Categorie:
-      div
-        for categorie in categories
-          div(style='display: inline; padding-right:10px;')
-            if categorie.checked
-              input.checkbox-input(type='checkbox', name='categorie', id=categorie._id, value=categorie._id, checked)
-            else
-              input.checkbox-input(type='checkbox', name='categorie', id=categorie._id, value=categorie._id)
-            label(for=categorie._id) &nbsp;#{categorie.name}
+        input(type='text', id='category-search', placeholder='Search categories...', oninput="filterCategories()")
+        div#category-list(style='max-height: 200px; overflow-y: auto;')
+            for categorie in categories
+              div.category-item(style='padding: 5px;')
+                input(type='radio', name='categorie', id=categorie._id, value=categorie._id)
+                label(for=categorie._id) &nbsp;#{categorie.name}
     div.form-group
       label(for='date') Date of event:
       input#date.form-control(type='date' name='date' value=(undefined === event ? '' : event.date) )
@@ -34,3 +32,21 @@ block content
     ul
       for error in errors
         li!= error.msg
+
+  script.
+    function filterCategories() {
+      const searchTerm = document.getElementById('category-search').value.toLowerCase();
+      const categoryItems = document.querySelectorAll('.category-item');
+
+      categoryItems.forEach(function (item) {
+        const label = item.querySelector('label');
+        const categoryName = label ? label.textContent.trim().toLowerCase() : '';
+
+        if (categoryName.indexOf(searchTerm) === -1) {
+          item.style.display = 'none';  // Hide categories that don't match
+        } else {
+          item.style.display = 'block';  // Show categories that match
+        }
+      });
+    }
+
