--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html(lang='en')
               li
                 a(href='/home/events') All events
               li
-                a(href='/home/categories') All games
+                a(href='/home/games') All games
               li
                 hr
               li
