--- a/views/event_detail_unsigned.pug
+++ b/views/event_detail_unsigned.pug
@@ -3,8 +3,8 @@ extends layout
 block content
     h1 Title: #{event.title}
 
-    p #[strong categorie: ]
-        a(href=event.categorie.url) #{event.categorie.name}
+    p #[strong game: ]
+        a(href=event.game.url) #{event.game.name}
     p #[strong Summary:] #{event.description}
 
     div(style='margin-left:20px;margin-top:20px')
