--- a/views/event_list.pug
+++ b/views/event_list.pug
@@ -7,11 +7,11 @@ block content
             each event in event_list
                 li
                     a(href=event.url) #{event.title}
-                        |  (#{event.categorie.name})
+                        |  (#{event.game.name})
                         if event.status === 'Available'
-                            p.text-success (#{event.categorie.name}) Available = #{event.participants.length} / #{event.max_size}
+                            p.text-success (#{event.game.name}) Available = #{event.participants.length} / #{event.max_size}
                         else if event.status === 'Full'
-                            p.text-danger (#{event.categorie.name}) event is full, #{event.participants.length} / #{event.max_size}
+                            p.text-danger (#{event.game.name}) event is full, #{event.participants.length} / #{event.max_size}
                         else
                             p.text-warning #{event.status}
 
