--- a/views/login.pug
+++ b/views/login.pug
@@ -17,9 +17,9 @@ block content
 
         h2 or
             div
-                a(href="/user/auth/google" style="text-decoration: none; color: white; background-color: #4285f4; padding: 10px; border-radius: 5px; display: inline-block;")
-                    | Sign in with Google
+                a(href="/user/auth/google") Sign in with Google
 
 
-        h2 not registered yet?
-        a(href='/user/register') Register here
+        h2 or
+            div
+                a(href='/user/register') Register here
