--- a/views/profile.pug
+++ b/views/profile.pug
@@ -2,6 +2,11 @@ extends layout
 
 block content
     h1= title
+    if user.profilePicture
+        img(src=`data:image/png;base64,${user.profilePicture.toString('base64')}`, alt='Profile Picture')
+    else
+        img(src='/images/default.png', alt='Default Profile Picture', width='150', height='150')
+
     if user
         h2 Username: #{user.username}
         h3 Email: #{user.email}
@@ -11,5 +16,6 @@ block content
             each event in user.events
                 li
                     a(href=event.url) #{event.title}
+        a(href='/user/profile/edit') Edit Profile
     else
         p User not found.
