--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,39 +4,102 @@ html(lang='en')
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
-    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    div(class='container-fluid')
-      div(class='row')
-        div(class='col-sm-2')
-          block sidebar
-            ul(class='sidebar-nav')
-              li
-                a(href='/home') Home
-              li
-                a(href='/home/events') All events
-              li
-                a(href='/home/games') All games
-              li
+    //link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
+    //script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+    //script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
+    link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+    style.
+        body, h1, h2, h3, h4, h5, h6 {
+          font-family: "Montserrat", sans-serif
+        }
 
-              if user
-                hr
-                li
-                  a(href='/home/event/create') Create new event
-                li
-                  a(href='/home/games/create') Create new game
-                hr
-                li
-                  a(href='/user/logout') Logout
-                li
-                  a(href='/user/profile') Profile
-              else
-                hr
-                li
-                  a(href='/user/login') Login
+        .w3-bar-block {
+          list-style-type: none; /* Removes the default bullet points */
+        }
 
-        div(class='col-sm-10')
-          block content
+        .w3-row-padding img {
+          margin-bottom: 12px
+        }
+
+        .w3-sidebar {
+          width: 120px;
+          background: #222;
+        }
+
+        #main {
+          margin-left: 120px;
+        }
+
+        @media only screen and (max-width: 600px) {
+          .w3-sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1; /* Make sure it's on top of other content */
+            padding: 10px 0;
+            display: flex;
+            justify-content: space-around; /* Distribute the items horizontally */
+            flex-direction: row; /* Place items next to each other */
+            background: #222; /* Ensure the sidebar has a background */
+            width: 100%; /* Sidebar takes full width */
+          }
+
+          #main {
+            margin-top: 60px;
+            margin-left: 0;
+          }
+
+          .w3-bar-item {
+            padding: 10px 15px;
+            font-size: 16px;
+          }
+        }
+    //link(rel='stylesheet', href='/stylesheets/style.css')
+
+
+  body(class='w3-black')
+    // Sidebar
+    nav.w3-sidebar.w3-bar-block.w3-small.w3-center
+      block sidebar
+        ul(class='w3-bar-block')
+          li
+            a(href='/home' class='w3-bar-item w3-button') Home
+          li
+            a(href='/home/events' class='w3-bar-item w3-button') All events
+          li
+            a(href='/home/games' class='w3-bar-item w3-button') All games
+          if user
+            hr
+            li
+              a(href='/home/event/create' class='w3-bar-item w3-button') Create new event
+            li
+              a(href='/home/games/create' class='w3-bar-item w3-button') Create new game
+            hr
+            li
+              a(href='/user/logout' class='w3-bar-item w3-button') Logout
+            li
+              a(href='/user/profile' class='w3-bar-item w3-button') Profile
+          else
+            hr
+            li
+              a(href='/user/login' class='w3-bar-item w3-button') Login
+
+    // Main Content
+    div#main(class='w3-padding-large')
+      block content
+
+    // Footer
+    footer.w3-content.w3-padding-64.w3-text-grey.w3-xlarge
+      //i.fa.fa-facebook-official.w3-hover-opacity
+      //i.fa.fa-instagram.w3-hover-opacity
+      //i.fa.fa-snapchat.w3-hover-opacity
+      //i.fa.fa-pinterest-p.w3-hover-opacity
+      //i.fa.fa-twitter.w3-hover-opacity
+      //i.fa.fa-linkedin.w3-hover-opacity
+      p.w3-medium
+        |   Powered by
+        a.w3-hover-text-green(href='https://www.w3schools.com/w3css/default.asp' target='_blank') w3.css
+
+
