--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,36 +32,33 @@ html(lang='en')
         }
 
         @media only screen and (max-width: 600px) {
-          .w3-sidebar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1; /* Make sure it's on top of other content */
-            padding: 10px 0;
-            display: flex;
-            justify-content: space-around; /* Distribute the items horizontally */
-            flex-direction: row; /* Place items next to each other */
-            background: #222; /* Ensure the sidebar has a background */
-            width: 100%; /* Sidebar takes full width */
-          }
-
           #main {
             margin-top: 60px;
             margin-left: 0;
-          }
-
-          .w3-bar-item {
-            padding: 10px 15px;
-            font-size: 16px;
           }
         }
     //link(rel='stylesheet', href='/stylesheets/style.css')
 
 
   body(class='w3-black')
+    // Top Navbar for Mobile (Hidden by default)
+    nav.w3-top.w3-hide-medium.w3-hide-large.w3-opacity w3-hover-opacity-off
+      .w3-bar.w3-black.w3-opacity w3-hover-opacity-off.w3-center.w3-small
+        a.w3-bar-item.w3-button(href='/home') Home
+        a.w3-bar-item.w3-button(href='/home/events') All events
+        a.w3-bar-item.w3-button(href='/home/games') All games
+        if user
+          hr
+          a(href='/home/event/create' class='w3-bar-item w3-button') Create new event
+          a(href='/home/games/create' class='w3-bar-item w3-button') Create new game
+          hr
+          a(href='/user/logout' class='w3-bar-item w3-button') Logout
+          a(href='/user/profile' class='w3-bar-item w3-button') Profile
+        else
+          hr
+          a(href='/user/login' class='w3-bar-item w3-button') Login
     // Sidebar
-    nav.w3-sidebar.w3-bar-block.w3-small.w3-center
+    nav.w3-sidebar.w3-bar-block.w3-small.w3-hide-small.w3-center
       block sidebar
         ul(class='w3-bar-block')
           li
