--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -6,6 +6,6 @@ block content
     form(action="/home/games/create" method="post")
         div.form-group
             label(for="name") Game Name:
-            input#name.form-control(type="text" name="name" required)
+            input.w3-input.w3-input-form#name.form-control(type="text" name="name" required)
 
         button.btn.btn-primary(type="submit") Create Game
