--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,8 +14,36 @@ html(lang='en')
           font-family: "Montserrat", sans-serif
         }
 
-        .w3-bar-block {
+        .w3-input {
+          background: #222;
+          color: white;
+        }
+
+        .w3-input-search {
+          width: 100%;
+          max-width: 400px;
+        }
+
+        .w3-input-form{
+          max-height:25px;
+          max-width: 200px;
+        }
+
+        .form-group{
+            margin-top: 10px;
+        }
+
+        .w3-bar-block,.no-bullets {
           list-style-type: none; /* Removes the default bullet points */
+        }
+
+        .w3-bar {
+          display: flex;
+          flex-wrap: wrap;
+          list-style-type: none; /* Removes the default bullet points */
+          background: #222;
+          padding: 0;
+          margin: 0;
         }
 
         .w3-row-padding img {
@@ -31,34 +59,55 @@ html(lang='en')
           margin-left: 120px;
         }
 
+        footer {
+          text-align: left; /* Aligns the footer content to the right */
+          margin-left: 125px;
+
+        }
+
         @media only screen and (max-width: 600px) {
           #main {
-            margin-top: 60px;
             margin-left: 0;
           }
+
+          footer {
+            text-align: left; /* Aligns the footer content to the right */
+            margin-left: 5px;
+          }
         }
+    //60px bij margin top
     //link(rel='stylesheet', href='/stylesheets/style.css')
 
 
   body(class='w3-black')
-    // Top Navbar for Mobile (Hidden by default)
-    nav.w3-top.w3-hide-medium.w3-hide-large.w3-opacity w3-hover-opacity-off
-      .w3-bar.w3-black.w3-opacity w3-hover-opacity-off.w3-center.w3-small
-        a.w3-bar-item.w3-button(href='/home') Home
-        a.w3-bar-item.w3-button(href='/home/events') All events
-        a.w3-bar-item.w3-button(href='/home/games') All games
-        if user
-          hr
-          a(href='/home/event/create' class='w3-bar-item w3-button') Create new event
-          a(href='/home/games/create' class='w3-bar-item w3-button') Create new game
-          hr
-          a(href='/user/logout' class='w3-bar-item w3-button') Logout
-          a(href='/user/profile' class='w3-bar-item w3-button') Profile
-        else
-          hr
-          a(href='/user/login' class='w3-bar-item w3-button') Login
+
+
+    nav.w3-bar.w3-hide-medium.w3-hide-large
+      block bar
+        ul(class='w3-bar')
+          li
+            a(href='/home' class='w3-bar-item w3-button') Home
+          li
+            a(href='/home/events' class='w3-bar-item w3-button') All events
+          li
+            a(href='/home/games' class='w3-bar-item w3-button') All games
+          if user
+            hr
+            li
+              a(href='/home/event/create' class='w3-bar-item w3-button') Create new event
+            li
+              a(href='/home/games/create' class='w3-bar-item w3-button') Create new game
+            hr
+            li
+              a(href='/user/logout' class='w3-bar-item w3-button') Logout
+            li
+              a(href='/user/profile' class='w3-bar-item w3-button') Profile
+          else
+            hr
+            li
+              a(href='/user/login' class='w3-bar-item w3-button') Login
     // Sidebar
-    nav.w3-sidebar.w3-bar-block.w3-small.w3-hide-small.w3-center
+    nav.w3-sidebar.w3-bar-block.w3-hide-small.w3-center
       block sidebar
         ul(class='w3-bar-block')
           li
@@ -88,7 +137,7 @@ html(lang='en')
       block content
 
     // Footer
-    footer.w3-content.w3-padding-64.w3-text-grey.w3-xlarge
+    footer.w3-padding-64.w3-text-grey.w3-xlarge
       //i.fa.fa-facebook-official.w3-hover-opacity
       //i.fa.fa-instagram.w3-hover-opacity
       //i.fa.fa-snapchat.w3-hover-opacity
@@ -96,7 +145,7 @@ html(lang='en')
       //i.fa.fa-twitter.w3-hover-opacity
       //i.fa.fa-linkedin.w3-hover-opacity
       p.w3-medium
-        |   Powered by
+        |   This project uses <by></by>
         a.w3-hover-text-green(href='https://www.w3schools.com/w3css/default.asp' target='_blank') w3.css
 
 
