--- a/views/login.pug
+++ b/views/login.pug
@@ -8,10 +8,10 @@ block content
         form(action="/user/login" method="POST")
             div
                 label(for="username") Username:
-                input(type="text" name="username" id="username" required)
+                input.w3-input.w3-input-search(type="text" name="username" id="username" required)
             div
                 label(for="password") Password:
-                input(type="password" name="password" id="password" required)
+                input.w3-input.w3-input-search(type="password" name="password" id="password" required)
             div
                 button(type="submit") Login
 
