session cookie instead of a cookie with expire date
fixed a couple of bugs

session cookie instead of a cookie with expire date
fixed link in game list to event detail
remove event after 2 days after event is started
added number of events in profile

--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -44,5 +44,5 @@ block content
                 a(href=event.url + '/leave') Leave event
             else
                 p
-                if status_event === "Available"
+                if status_event === "Available" && new Date(event.date) > new Date()
                     a(href=event.url + '/join') join event
