--- a/views/profile.pug
+++ b/views/profile.pug
@@ -11,7 +11,7 @@ block content
         h2 Username: #{user.username}
         h3 Email: #{user.email}
         h3 Rating: #{user.rating}
-        h3 Events:
+        h3 Events: #{numEvents}
         ul
             each event in user.events
                 li
