--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -7,7 +7,7 @@ block content
     ul#game-list
       each game in game_list
         li
-          a(href=`/game/${game._id}`) #{game.name}
+          a(href=game.url) #{game.name}
   else
     p There are no games.
 
