--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,26 @@ html(lang='en')
           font-family: "Montserrat", sans-serif
         }
 
+        .footer {
+          background: linear-gradient(to right, #4f9afa, #651ae6); /* Gradient background */
+          color: white;
+          text-align: center;
+          padding: 10px 0;
+          border-top: 2px solid white; /* Add a border to the top */
+          position: relative;
+          width: 100%;
+        }
+
+        .footer a {
+          color: white;
+          text-decoration: none;
+          margin: 0 10px;
+        }
+
+        .footer a:hover {
+          text-decoration: underline;
+        }
+
         .w3-bar-block {
           list-style-type: none; /* Removes the default bullet points */
         }
@@ -41,6 +61,10 @@ html(lang='en')
         .w3-bar {
           display: flex;
           justify-content: flex-end; /* Align items to the right */
+          background-color: #151519; /* Change background color to gray */
+          border: 2px solid #151519; /* Add a border around the entire header */
+
+
         }
 
         .w3-bar .w3-bar-item {
@@ -49,9 +73,11 @@ html(lang='en')
     //link(rel='stylesheet', href='/stylesheets/style.css')
 
 
-  body(class='w3-black')
+
+
+body(class='w3-black')
     // Top Navbar for Mobile (Hidden by default)
-    header.w3-bar.w3-black
+    header.w3-bar
       a.w3-bar-item.w3-button(href='/home') Home
       a.w3-bar-item.w3-button(href='/home/events') All events
       a.w3-bar-item.w3-button(href='/home/games') All games
@@ -68,11 +94,9 @@ html(lang='en')
     div#main(class='w3-padding-large')
       block content
 
-    // Footer
-    //footer.w3-content.w3-padding-64.w3-text-grey.w3-xlarge
-      //i.fa.fa-facebook-official.w3-hover-opacity
-      //i.fa.fa-instagram.w3-hover-opacity
-      //i.fa.fa-snapchat.w3-hover-opacity
-      //i.fa.fa-pinterest-p.w3-hover-opacity
-      //i.fa.fa-twitter.w3-hover-opacity
-      //i.fa.fa-linkedin.w3-hover-opacity
+    footer(class='footer')
+      a(href='/privacy-policy') Privacy Policy
+      |  |
+      a(href='/terms-of-service') Terms of Use
+      |  |
+      span Copyright 2024
