--- a/views/layout.pug
+++ b/views/layout.pug
@@ -70,6 +70,24 @@ html(lang='en')
         .w3-bar .w3-bar-item {
           margin-left: 10px; /* Add some space between items */
         }
+
+        .hero {
+          position: relative;
+          width: 100%;
+          height: calc(100vh - 60px); /* Full height minus header height */
+          background: url('/images/pexels-a-darmel-7862414.jpg') no-repeat center center/cover;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          text-align: center;
+        }
+
+        .hero-text {
+          background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+          padding: 20px;
+          border-radius: 10px;
+        }
     //link(rel='stylesheet', href='/stylesheets/style.css')
 
 
