--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,7 @@
 extends layout
 
 block content
-    h1= title
-    p Welcome to #[em gamingDen]
-
-    h2 Dynamic content
-
-    p The Gaming den has the following record counts:
-
-    ul
-        li #[strong Events:] !{numEvents}
+    .hero
+        .hero-text
+            h1 GamersDen
+            p Party up with other gamers for your favourite game
